# renderscript-samples

./: README.md
.github/workflows/: copy-branch.yml
BasicRenderScript/: README.md  packaging.yaml
BasicRenderScript/.google/: packaging.yaml
BasicRenderScript/Application/: build.gradle  project.properties
BasicRenderScript/Application/src/main/: AndroidManifest.xml
BasicRenderScript/Application/src/main/res/layout/: main_layout.xml
BasicRenderScript/Application/src/main/res/values/: base-strings.xml  colors.xml  strings.xml  styles.xml
BasicRenderScript/Application/src/main/rs/: saturation.rs
BasicRenderScript/Application/tests/: AndroidManifest.xml
BasicRenderScript/gradle/wrapper/: gradle-wrapper.properties
RenderScriptIntrinsic/: README.md  packaging.yaml
RenderScriptIntrinsic/.google/: packaging.yaml
RenderScriptIntrinsic/Application/: build.gradle
RenderScriptIntrinsic/Application/src/main/: AndroidManifest.xml
RenderScriptIntrinsic/Application/src/main/res/layout/: main_layout.xml
RenderScriptIntrinsic/Application/tests/: AndroidManifest.xml
RenderScriptMigrationSample/: .clang-format  README.md  build.gradle  settings.gradle
RenderScriptMigrationSample/app/: build.gradle
RenderScriptMigrationSample/app/src/main/: AndroidManifest.xml
RenderScriptMigrationSample/app/src/main/cpp/: CMakeLists.txt  ComputePipeline.cpp  ComputePipeline.h  GLDebug.cpp  ImageProcessor.cpp  ImageProcessor.h  RsMigration_jni.cpp  Utils.h  VulkanContext.cpp  VulkanContext.h  VulkanResources.cpp  VulkanResources.h
RenderScriptMigrationSample/app/src/main/rs/: blur.rs  colormatrix.rs
RenderScriptMigrationSample/app/src/main/shaders/: BlurHorizontal.comp  BlurVertical.comp  ColorMatrix.comp
RenderScriptMigrationSample/gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
